namespace MusicBox.Domain;

public enum Figure
{
    Redonda,
    Blanca,
    Negra,
    Corchea,
    Semicorchea
}
