namespace MusicBox.Domain;

public enum Note
{
    Do,
    Re,
    Mi,
    Fa,
    Sol,
    La,
    Si
}
